some changes made

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <i class="fas fa-plus" id="add-btn"></i>
         </div>
 
-        <div id="below-header">
+        <div id="header">
             <div id="complete-all-btn">
                 <i class="far fa-check-circle"></i>
                 <span>Complete All Tasks</span>
@@ -27,35 +27,35 @@
 
         <div class="tasks-container" id="all">
             <div class="task-card completed">
-                <div class="status-icon"></div>
+                <div class="status-color"></div>
                 <div class="task-content">faisal</div>
                 <div class="task-status green">Completed</div>
                 <div class="task-delete-btn"><i class="far fa-trash-alt"></i></div>
             </div>
 
             <div class="task-card completed">
-                <div class="status-icon"></div>
+                <div class="status-color"></div>
                 <div class="task-content">complete</div>
                 <div class="task-status green">Completed</div>
                 <div class="task-delete-btn"><i class="far fa-trash-alt"></i></div>
             </div>
 
             <div class="task-card not-started">
-                <div class="status-icon"></div>
+                <div class="status-color"></div>
                 <div class="task-content">the</div>
                 <div class="task-status red">not-started</div>
                 <div class="task-delete-btn"><i class="far fa-trash-alt"></i></div>
             </div>
 
             <div class="task-card in-progress">
-                <div class="status-icon"></div>
+                <div class="status-color"></div>
                 <div class="task-content">project</div>
                 <div class="task-status blue">in-progress</div>
                 <div class="task-delete-btn"><i class="far fa-trash-alt"></i></div>
             </div>
 
             <div class="task-card in-progress">
-                <div class="status-icon"></div>
+                <div class="status-color"></div>
                 <div class="task-content">hello</div>
                 <div class="task-status blue">in-progress</div>
                 <div class="task-delete-btn"><i class="far fa-trash-alt"></i></div>
@@ -69,10 +69,10 @@
             </div>
 
             <div class="filter">
-                <p id="showAll" class="filter-btn">All</p>
-                <p id="showComplete" class="filter-btn">Completed</p>
-                <p id="showInProgress" class="filter-btn">In-progress</p>
-                <p id="showNotStarted" class="filter-btn">Not-started</p>
+                <p id="showAllTasks" class="filter-btn">All</p>
+                <p id="showCompleteTasks" class="filter-btn">Completed</p>
+                <p id="showInProgressTasks" class="filter-btn">In-progress</p>
+                <p id="showNotStartedTasks" class="filter-btn">Not-started</p>
             </div>
         </div>
     </main>
